# aws-serverless-microvm-poc

./: README.md
docs/: 02-docker-compose.html  index.html
pocs/01-hello-world/: Dockerfile  README.md  app.py  microvm.py  pyproject.toml
pocs/02-docker-compose/: .gitignore  README.md  microvm.py
pocs/02-docker-compose/stack/: Dockerfile  debug-exec.py  docker-compose.yml  entrypoint.sh
pocs/02-docker-compose/stack/backend/: app.py
pocs/03-agent-sandbox/: .gitignore  README.md  microvm.py  pyproject.toml
pocs/03-agent-sandbox/image/: Dockerfile  app-up.sh  debug-exec.py  entrypoint.sh  shot.cjs
pocs/03-agent-sandbox/workspace/: CLAUDE.md  docker-compose.yml
pocs/03-agent-sandbox/workspace/backend/: app.py
pocs/03-agent-sandbox/workspace/frontend/: index.html
pocs/04-agent-stream/: .gitignore  README.md  microvm.py  pyproject.toml
pocs/04-agent-stream/image/: Dockerfile  agent-server.py  debug-exec.py  entrypoint.sh
pocs/05-secrets-token/: README.md  microvm.py  pyproject.toml
pocs/05-secrets-token/image/: Dockerfile  agent-server.py  entrypoint.sh
pocs/05-secrets-token/workspace/: CLAUDE.md
pocs/06-docker-app-host/: .gitignore  README.md  microvm.py  pyproject.toml
pocs/06-docker-app-host/stack/: Dockerfile  agent-server.py  daemon.json  entrypoint.sh
pocs/06-docker-app-host/stack/buildgate/: Dockerfile.npm  (+1 more)
pocs/08-persistent-run/: .gitignore  README.md  microvm.py  pyproject.toml
pocs/08-persistent-run/image/: Dockerfile  agent-server.py  entrypoint.sh  hooks.py  persist.py
pocs/08-persistent-run/workspace/: CLAUDE.md
